Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.12.2
-
Fix Version/s: 5.15.10, 6.2.5, 6.3.0 RC, 6.4.0 Beta1
-
Component/s: Extras: Android, Quick: Dialogs, Quick: Other
-
Labels:
-
Platform/s:
-
Epic Link:
-
Story Points:8
-
Commits:d10d1f97d0 (qt/qtdeclarative/dev) b844ee29dd (qt/qtdeclarative/6.3) b844ee29dd (qt/tqtc-qtdeclarative/6.3) d10d1f97d0 (qt/tqtc-qtdeclarative/dev) fb9d2be11e (qt/tqtc-qtquickcontrols2/5.15) b844ee29dd (qt/tqtc-qtdeclarative/6.3.0)
-
Sprint:Team A Foundation Sprint 53, Team A Foundation Sprint 54
Description
import QtQuick 2.15 import QtQuick.Controls 2.15 import Qt.labs.platform 1.1 ApplicationWindow { width: 640 height: 480 visible: true title: qsTr("Test") Image { source: fileDialog.file } Button{ text: "Open" onClicked: { fileDialog.open() } } FileDialog { id: fileDialog defaultSuffix: "jpg" onAccepted: { console.log(file) } } }
This code works fine on the desktop
But on Android 11 it will return uri:
content://com.android.providers.media.documents/document/image:36.jpg
Here .jpg is redundant and unnecessary
This caused the file to fail to open
Attachments
For Gerrit Dashboard: QTBUG-94391 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
400624,2 | FileDialog: do not add default suffix when content scheme is used | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
401201,2 | FileDialog: do not add default suffix when content scheme is used | 6.3 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
401202,2 | FileDialog: do not add default suffix when content scheme is used | 6.2 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
401268,2 | FileDialog: do not add default suffix when content scheme is used | tqtc/lts-5.15 | qt/tqtc-qtquickcontrols2 | Status: MERGED | +2 | 0 |