src/quickdialogs2/quickdialogs2/qquickfiledialog.cpp
@@ -576,8 +576,13 @@ QUrl QQuickFileDialog::addDefaultSuffix(const QUrl &file) const
     QUrl url = file;
     const QString path = url.path();
     const QString suffix = m_options->defaultSuffix();
-    if (!suffix.isEmpty() && !path.endsWith(QLatin1Char('/')) && path.lastIndexOf(QLatin1Char('.')) == -1)
+    // Urls with "content" scheme do not require suffixes. Such schemes are
+    // used on Android.
+    const bool isContentScheme = url.scheme() == u"content"_qs;
+    if (!isContentScheme && !suffix.isEmpty() && !path.endsWith(QLatin1Char('/'))
+        && path.lastIndexOf(QLatin1Char('.')) == -1) {
         url.setPath(path + QLatin1Char('.') + suffix);
+    }
     return url;
 }
 
